# medalzai

./: .dockerignore  .gitignore  docker-compose.yml  go.mod
client/: Dockerfile  package.json  pnpm-lock.yaml  svelte.config.js
client/src/: app.css  app.html
client/src/lib/components/: Linkarea.svelte  Navbar.svelte  Settingspanel.svelte  Toolbar.svelte  Videopanel.svelte  index.ts
client/src/lib/icons/: Medal-full.svelte  Medal.svelte
client/src/lib/state/: index.svelte.ts
client/src/lib/types/: video.ts
client/src/lib/video/: client.ts  index.ts  process.ts  save.ts  urls.ts  validate.ts
client/src/routes/: +layout.svelte  +page.svelte
client/src/routes/download/: +page.svelte
client/src/routes/settings/: +page.svelte
cmd/api/: Dockerfile  main.go
internal/server/: server.go
internal/video/: handler.go  models.go  video.go
server/: Cargo.toml  Dockerfile
server/src/: app.rs  main.rs
server/src/routes/: metadata.rs  mod.rs  proxy.rs
server/src/services/: medal.rs  mod.rs
